--- a/LocAdoc/app/src/main/res/values/strings.xml
+++ b/LocAdoc/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="action_settings">Settings</string>
     <string name="user_name_menu">User Name</string>
     <string name="search_hint">Search Area</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
