--- a/LocAdoc/app/src/main/res/values/strings.xml
+++ b/LocAdoc/app/src/main/res/values/strings.xml
@@ -49,7 +49,6 @@
     <!-- Strings related to verification for forgot password and reset password-->
     <string name="pwdrecovery_desc1">Please enter the code below to reset password</string>
     <string name="pwdrecovery_desc2">A Verification code was sent</string>
-
     <string name="pwdrecovery_pwd">New Password</string>
     <string name="pwdrecovery_confirmpwd">Reconfirm New Password</string>
     <string name="pwdrecovery_code">Verification Code</string>
@@ -57,6 +56,7 @@
     <string name="pwdrecovery_submit">Submit</string>
     <string name="pwdrecovery_resend">Resend a new code</string>
     <string name="aws_userpool">ap-southeast-1_Qng7tbYxG</string>
+    <string name="aws_identitypool">ap-southeast-1:365da5cf-e75f-4e4f-84bb-d99244df4408</string>;
     <string name="aws_appid">44ftbv7gbpmjnvjih4ckpemokl</string>
     <string name="aws_appsec">dg4a9hisgrqdenj81rcgagt9pc66837m2fp5ike31ddpc7kt8js</string>
     <string name="new_area_label">New Area</string>
