--- a/LocAdoc/app/src/main/res/values/strings.xml
+++ b/LocAdoc/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="new_area_name_hint">Area name</string>
     <string name="new_area_desc_hint">Small description</string>
     <string name="radius_label">Radius</string>
-    <string name="create_new_area_btn">Create New Area</string>
+    <string name="create_new_area_btn">Create new area</string>
     <string name="existing_area_label">Select existing area</string>
     <string name="existing_area_btn">Choose existing area</string>
     <string name="cancel_import_button">Cancel</string>
