--- a/LocAdoc/app/src/main/res/values/strings.xml
+++ b/LocAdoc/app/src/main/res/values/strings.xml
@@ -75,5 +75,6 @@
     <string name="meter_label">m</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="file_operation_Head">File Name</string>
+    <string name="file_operation_AreaName">Select area</string>
 </resources>
