Made changes to android project
1. Added CHNAGE USER Btn
2. Added delete account

--- a/LocAdoc/app/src/main/res/values/strings.xml
+++ b/LocAdoc/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="file_operation_Head">File Name</string>
     <string name="file_operation_AreaName">Select area</string>
+    <string name="About_description"><p>LocAdoc aims to provide its user a way to store confidential documents in mobile devices and access it only in the area he/she find it is safe. By including two factor protections, one being password\n(what the user knows) and second being the location (where the user is currently),hence providing secure vault for document storage so the it does not get into wrong hands even if the device is compromised.</p></string>
+    <string name="About_version">Version 1.0</string>
 </resources>
